[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wechat-scraper"
version = "0.1.0"
description = "微信公众号文章抓取器"
requires-python = ">=3.10"
dependencies = [
    "pychrome",
    "beautifulsoup4",
    "lxml",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
